# vektor

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENTS.md  Deploy.yml  Dockerfile  Dockerfile.test  FEATURES.md  LICENSE  Podman.yml  README.md  Taskfile.yml  biome.json  compose.yaml  docker-compose.yml  example.env  install.sh  mise.docker.toml  mise.local.toml  package.json
.github/workflows/: build.yml  docker.yml  release.yml
api/: README.md  package.json  tsconfig.json
api/src/: index.ts  loader.ts
api/test/: client.test.ts
app/: .gitignore  astro.config.mjs  build.ts  figma.config.json  knip.json  package.json  tsconfig.json  vektor.ts
app/bench/: .gitignore  README.md  canvas-ops.mjs  perf.ts  presence-load.mjs  stress.mjs  yjs-join-probe.mjs
app/docs/: api.md  cli.md  db.md  document-addresses.md  extensions.md  importer.md  security-fixes.md  security-hardening-progress.md  vektor-cloud.md  workflows.md
app/examples/: agent-acp.json
app/native/embedding/: Cargo.toml  README.md  build.ts  index.d.ts  package.json
app/native/embedding/src/: lib.rs
app/native/exec/: Cargo.toml  README.md  build.ts  index.d.ts  package.json
app/native/exec/src/: lib.rs  marshal.rs  sync_eval.rs  workflow_vm.rs
app/native/image/: Cargo.toml  README.md  build.ts  package.json
app/native/image/src/: lib.rs
app/public/: llms.txt  manifest.json
app/scripts/: generate-client-assets.ts
app/src/: app.ts  auth.ts  (+8 more)
astro-loader/: index.ts  package.json
cli/: package.json
docs/: attack-surfaces.md  blog-profile.md
executor/: Cargo.toml  index.js  package.json
js-engine/: Cargo.toml  index.d.ts  index.js  package.json
scripts/: convert-xwiki-to-wif.ts  create-perf-test-data.ts  genApiRoutes.ts  import-xwiki.ts  package.json  post-html.ts  treesitter.ts
(+700 files in other folders)
